--- a/website/index.html
+++ b/website/index.html
@@ -16,6 +16,8 @@
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+
+
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
@@ -134,24 +136,12 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="graphs">
         <div class="my-auto">
           <h2 class="mb-5">Graphs</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Graph 1</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+          {% for graph in graphs %}
+            <div class="resume-content mr-auto" style="margin:75px">
+              <h3 class="mb-0">{{graph.name}}</h3>
+              <canvas id="{{graph.name}}" width="400" height="200"></canvas>
             </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Graph 2</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
-            </div>
-          </div>
-
+          {% endfor %}
         </div>
       </section>
       {% endif %}
@@ -189,15 +179,46 @@
         <div>
       </section>
 
-      
+
     </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    {% for graph in graphs %}
+    <script>
+    new Chart(document.getElementById("{{graph.name}}"), {
+      type: 'line',
+      data: {
+        labels: {{graph.labels}},
+        datasets: [{
+            data: {{graph.stock}},
+            label: "Stock",
+            borderColor: "#3e95cd",
+            fill: false
+          }, {
+            data: {{graph.tweets}},
+            label: "Tweet",
+            borderColor: "#8e5ea2",
+            fill: false
+          }
+        ]
+      },
+      options: {
+        title: {
+          display: true,
+          text: "{{graph.description}}"
+        }
+      }
+    });
+    </script>
+    {% endfor %}
+
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
