Added colouring options for the website generator

--- a/website/index.html
+++ b/website/index.html
@@ -23,7 +23,8 @@
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/resume{{colour|lower}}.min.css" rel="stylesheet">
+
 
   </head>
 
