updates to webiste

--- a/website/index.html
+++ b/website/index.html
@@ -122,6 +122,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">{{item.title}}</h3>
               <div class="subheading mb-3">{{item.tags}}</div>
+              <img src="{{item.image}}" width="200" height="200">
               <p>{{item.snippet}}</p>
             </div>
             <div class="resume-date text-md-right">
