--- a/website/index.html
+++ b/website/index.html
@@ -25,6 +25,10 @@
     <!-- Custom styles for this template -->
     <link href="css/resume{{colour|lower}}.min.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.{{colour|lower}}-indigo.min.css">
+
+
 
   </head>
 
@@ -119,15 +123,23 @@
           <h2 class="mb-5">News</h2>
           {% for item in news %}
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">{{item.title}}</h3>
-              <div class="subheading mb-3">{{item.tags}}</div>
-              <img src="{{item.image}}" width="200" height="200">
-              <p>{{item.snippet}}</p>
-              <br/>
-              <p>{{item.notes}} </p>
-            </div>
-            <div class="resume-date text-md-right">
+              <div class="mdl-card mdl-shadow--4dp">
+                  <div class="mdl-card__title">
+                     <h2 class="mdl-card__title-text">{{item.title}}</h2>
+                  </div>
+                  <div class="mdl-card__media">
+                    <img src="{{item.image}}" border="0" alt="">
+                  </div>
+                  <div class="mdl-card__supporting-text">
+                      {{item.snippet}}
+                      <br/>
+                      <p>{{item.notes}} </p>
+                  </div>
+                  <div class="mdl-card__actions">
+                     <a href="{{item.link}}">Article</a>
+                  </div>
+                </div>
+           <div class="resume-date text-md-right">
               <span class="text-primary">{{item.date}}</span>
             </div>
           </div>
@@ -183,6 +195,7 @@
           <p>Email: {{email}}</p>
           <p>Phone number: {{pn}}</p>
         <div>
+              
       </section>
 
 
@@ -193,6 +206,7 @@
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
