--- a/website/index.html
+++ b/website/index.html
@@ -36,6 +36,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
+
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" alt="">
         </span>
@@ -48,14 +49,14 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#summary">Summary</a>
           </li>
-          {% if news is defined %}
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#news">News</a>
-          </li>
-          {% endif %}
           {% if graphs is defined %}
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#graphs">Graphs</a>
+          </li>
+          {% endif %}
+          {% if news is defined %}
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#news">News</a>
           </li>
           {% endif %}
           {% if models is defined %}
@@ -116,36 +117,6 @@
           </ul>
         </div>
       </section>
-      {% if news is defined %}
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="news">
-        <div class="my-auto">
-          <h2 class="mb-5">News</h2>
-          {% for item in news %}
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-              <div class="mdl-card mdl-shadow--4dp">
-                  <div class="mdl-card__title">
-                     <h2 class="mdl-card__title-text">{{item.title}}</h2>
-                  </div>
-                  <div class="mdl-card__media">
-                    <img src="{{item.image}}" border="0" alt="">
-                  </div>
-                  <div class="mdl-card__supporting-text">
-                      {{item.snippet}}
-                      <br/>
-                      <p>{{item.notes}} </p>
-                  </div>
-                  <div class="mdl-card__actions">
-                     <a href="{{item.link}}">Article</a>
-                  </div>
-                </div>
-           <div class="resume-date text-md-right">
-              <span class="text-primary">{{item.date}}</span>
-            </div>
-          </div>
-          {% endfor %}
-        </div>
-      </section>
-      {% endif %}
 
       {% if graphs is defined %}
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="graphs">
@@ -159,6 +130,39 @@
               <canvas id="{{graph.name}}" width="400" height="200"></canvas>
             </div>
           {% endfor %}
+        </div>
+      </section>
+      {% endif %}
+
+      {% if news is defined %}
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="news">
+        <div class="my-auto">
+          <h2 class="mb-5">News</h2>
+          <div class="mdl-grid">
+          {% for item in news %}
+          <div class="mdl-cell mdl-cell--4-col">
+              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                  <div class="mdl-card mdl-shadow--4dp">
+                      <div class="mdl-card__title">
+                         <h2 class="mdl-card__title-text">{{item.title}}</h2>
+                      </div>
+                      <div class="mdl-card__media">
+                        <img src="{{item.image}}" border="0" alt="">
+                      </div>
+                      <div class="mdl-card__supporting-text">
+                          {{item.date}}
+                          {{item.snippet}}
+                          <br/>
+                          <p>{{item.notes}} </p>
+                      </div>
+                      <div class="mdl-card__actions">
+                         <a href="{{item.link}}">Article</a>
+                      </div>
+                    </div>
+              </div>
+          </div>
+          {% endfor %}
+        </div>
         </div>
       </section>
       {% endif %}
