--- a/website/index.html
+++ b/website/index.html
@@ -147,12 +147,21 @@
                          <h2 class="mdl-card__title-text" align="center" style="overflow: hidden;text-align: center;max-height:8rem">{{item.title}}</h2>
                       </div>
                       <div class="mdl-card__media" style="background-color:rgba(255,255,255,0);justify-content: center;">
-                        <img src="{{item.image}}" border="0" alt="" style="display:block;margin-left:auto;margin-right:auto;height:15rem">
+                        {% if item.image is defined %}
+                        <img src="{{item.image}}" border="0" alt="" style="display:block;margin: 0 auto; width:100%;height:13rem">
+                        {% else %}
+                        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" alt="">
+                        {% endif %}
                       </div>
-                      <div class="mdl-card__subtitle-text"
-                           style="text-align:left;align:left;vertical-align:top;postion:absolute;margin-top:0.6rem; margin-left:0.8rem;font-size:0.9rem"
+                      <div class="mdl-card__supporting-text"
+                           style="float:left;text-align:left;vertical-align:top;padding:0.2rem;font-size:0.9rem;width:100%;margin-left:0.2rem;margin-top:0.2rem"
                       >
                         {{item.date}}
+                        {% if item.sentiment == "pos" %}
+                        <img src="static/img/pos.png" alt="" style="height:1rem;margin:0;float:right;width:2.5rem;height:2rem;margin-right:0.2rem;">
+                        {% else %}
+                        <img src="static/img/neg.png" alt="" style="height:1rem;margin:0;float:right;width:2.5rem;height:2rem;margin-right:0.2rem;">
+                        {% endif %}
                       </div>
                       <div class="mdl-card__supporting-text" align="center" style="height:13rem;width:100%;overflow: hidden;">
                           {{item.snippet}}
